--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(90deg, #e2e2e2, #c9d6ff);
+  background: linear-gradient(90deg, #e2e2e2, #1439b4);
 }
 
 .container {
@@ -103,7 +103,7 @@ form {
 .btn {
   width: 100%;
   height: 48px;
-  background-color: #7494ec;
+  background-color: #1440bc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   border: none;
@@ -146,7 +146,7 @@ form {
   left: -250%;
   width: 300%;
   height: 100%;
-  background: #7494ec;
+  background: #224ab7;
   border-radius: 150px;
   z-index: 2;
   transition: 1.8s ease-in-out;
